--- a/.github/workflows/buildJava.yml
+++ b/.github/workflows/buildJava.yml
@@ -20,4 +20,4 @@ jobs:
 
       # Étape 3 : 
       - name: Build and test with Maven
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=$(echo ${{ github.repository }} | sed 's-/-_-')
+        run: mvn -B package
