--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -4,26 +4,29 @@ on:
   pull_request:
     types:
       - closed  # Trigger on pull requests being closed
+    branches:
+      - main  # Trigger only on the main branch
 
 jobs:
-  generate-deploy-docs:
+  deploy:
     if: github.event.pull_request.merged == true  # Check if PR was merged
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v2
 
       - name: Set up JDK 21
         uses: actions/setup-java@v2
         with:
           java-version: '21'
+          distribution: 'corretto'
 
       - name: Generate Javadoc
         run: mvn -B javadoc:javadoc
 
-      - name: Create .nojekyll file
-        run: echo "" > ./target/site/apidocs/.nojekyll
+      - name: List Generated Javadoc
+        run: ls -R ./target/site/apidocs
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
