--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -11,8 +11,6 @@ jobs:
   deploy:
     if: github.event.pull_request.merged == true  # Check if PR was merged
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
 
     steps:
       - name: Checkout repository
@@ -27,12 +25,9 @@ jobs:
       - name: Generate Javadoc
         run: mvn -B javadoc:javadoc
 
-      - name: List Generated Javadoc
-        run: ls -R ./target/site/apidocs
-
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./target/site/apidocs  # Path to the generated Javadoc
-          enable_jekyll: true
+          jeckyll: false
